--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "embla-carousel-react": "^8.6.0",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-multi-carousel": "^2.8.6",
-    "react-simply-carousel": "^9.1.11",
-    "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
